feat: 예약시 결제 정보 저장 기능 추가